# trivyal

./: .checkov.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.agent.yml  docker-compose.hub.yml  pyproject.toml  renovate.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/workflows/: bump-version.yml  ci.yml  release.yml  tag-release.yml
agent/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
agent/src/trivyal_agent/: config.py  health.py  main.py
agent/src/trivyal_agent/core/: auth.py  cache.py  docker_client.py  docker_socket.py  misconfig_rules.py  misconfig_runner.py  scheduler.py  sidecar_client.py  trivy_runner.py
agent/src/trivyal_agent/ws/: client.py
agent/tests/: conftest.py  test_health.py  test_main.py
agent/tests/core/: test_auth.py  test_cache.py  test_docker_client.py  test_docker_socket.py  test_misconfig_runner.py  test_scheduler.py  test_sidecar_client.py  test_trivy_runner.py
agent/tests/ws/: test_client.py
docs/: architecture.md  testing.md
docs/design/: ui-design-guide.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: agents.spec.ts  auth.spec.ts  dashboard.spec.ts  findings.spec.ts  fixtures.ts
hub/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
hub/src/trivyal_hub/: __init__.py  config.py  main.py
hub/src/trivyal_hub/api/: deps.py
hub/src/trivyal_hub/api/v1/: __init__.py  agents.py  auth.py  dashboard.py  findings.py  hub.py  images.py  insights.py  misconfigurations.py  patches.py  scans.py  settings.py
hub/src/trivyal_hub/core/: acceptance_expiry.py  aggregator.py  auth.py  log_buffer.py  misconfig_aggregator.py  notifier.py  patch_coordinator.py
hub/src/trivyal_hub/db/: models.py  session.py
hub/src/trivyal_hub/db/migrations/: env.py  script.py.mako
hub/src/trivyal_hub/db/migrations/versions/: 0001_initial_schema.py  0002_priorities_feature.py  0003_unique_container_agent_image.py  0004_container_identity_drop_tag.py  0005_drop_notification_settings.py  0006_add_patch_tables.py  0006_index_agent_token_hash.py
hub/src/trivyal_hub/schemas/: agents.py  common.py  findings.py  images.py  misconfigs.py  patches.py  scans.py
hub/src/trivyal_hub/ws/: manager.py
hub/tests/: conftest.py  test_spa_fallback.py
hub/tests/api/: test_agents.py  test_auth.py  test_dashboard.py  test_findings.py  test_fixable_filter.py  test_health.py  test_hub.py  test_images.py  test_insights.py  test_misconfigurations.py  test_patches.py  test_scans.py  test_settings.py
hub/tests/core/: test_acceptance_expiry.py  test_aggregator.py  test_auth.py  test_misconfig_aggregator.py  test_patch_coordinator.py  test_timezone.py
hub/tests/db/: test_migrations.py  test_patch_models.py
hub/tests/ws/: test_manager.py
integration/: conftest.py  docker-compose.test.yml  pyproject.toml
integration/helpers/: agent_sim.py  trivy_fixtures.py
integration/tests/: test_acceptance_expiry.py  test_agents.py  test_auth.py  test_dashboard.py  test_digest_skip.py  test_finding_fixed_status.py  test_findings.py  test_images.py  test_insights.py  test_load.py  test_misconfigurations.py  test_patching.py  test_reconnect.py  test_resilience.py  test_risk_acceptance.py  test_scan_history.py  test_scan_trigger.py  test_settings.py  test_websocket.py
patcher/: Dockerfile  pyproject.toml
patcher/src/trivyal_patcher/: config.py  container_ops.py  copa_runner.py  docker_client.py  main.py  server.py
patcher/tests/: test_container_ops.py  test_copa_runner.py  test_server.py
scripts/: bump-version.sh
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
ui/public/: site.webmanifest
ui/src/: app.css  main.tsx
ui/src/components/common/: PageLayout.tsx  SeverityBadge.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  sheet.tsx  table.tsx
ui/src/features/agents/: index.ts
ui/src/features/dashboard/: index.ts
ui/src/features/findings/: index.ts
ui/src/features/insights/: index.ts
ui/src/features/priorities/: index.ts
ui/src/features/scans/: index.ts
ui/src/features/settings/: index.ts
ui/src/lib/api/: agents.ts  auth.ts  scans.ts  (+9 more)
ui/src/pages/: Agents.tsx  Dashboard.tsx  FindingDetail.tsx  Findings.tsx  Insights.tsx  Login.tsx  Patches.tsx  Priorities.tsx  ScanHistory.tsx  Settings.tsx
ui/src/store/: auth.ts
ui/tests/: setup.ts
ui/tests/components/: PageLayout.test.tsx  SeverityBadge.test.tsx
ui/tests/pages/: Agents.test.tsx  Dashboard.test.tsx  Findings.test.tsx  Insights.test.tsx  Login.test.tsx  Patches.test.tsx  Priorities.test.tsx  ScanHistory.test.tsx  Settings.test.tsx
ui/tests/store/: auth.test.ts
(+65 files in other folders)
