[project]
name = "trivyal-hub"
version = "0.3.2"
description = "Trivyal hub — central server for container vulnerability scanning"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.134",
    "sqlmodel>=0.0.37",
    "aiosqlite>=0.22",
    "pydantic-settings>=2.13",
    "pynacl>=1.6",
    "httpx>=0.28",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trivyal_hub"]
