[project]
name = "trivyal-hub"
version = "0.6.2"
description = "Trivyal hub — central server for container vulnerability scanning"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.41",
    "websockets>=16.0",
    "sqlmodel>=0.0.37",
    "aiosqlite>=0.22",
    "pydantic-settings>=2.13",
    "pynacl>=1.6",
    "httpx>=0.28",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/trivyal_hub/db/migrations/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trivyal_hub"]
