[project]
name = "trivyal-patcher"
version = "0.6.0"
description = "Trivyal patch sidecar — Copa-based container vulnerability patching"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13",
    "pydantic-settings>=2.13",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "pytest-aiohttp>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trivyal_patcher"]
